--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ footer {
 
 header {
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+  padding: 5px;
   position: sticky;
   top: 0;
   z-index: 1;
